Fix picture alignment

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -100,8 +100,8 @@ h2 {
 }
 
 .hero-logo {
-  
 }
+
 .hero-reg {
   float:none;
 }
@@ -290,7 +290,7 @@ legend {
   
   .hero-reg {
     float:left;
-    margin-right:30px;
+    margin-right:110px;
   }
   
   .hero-logo {
